firefox 3.6 question layout issue

--- a/public/stylesheets/scenarios.css
+++ b/public/stylesheets/scenarios.css
@@ -192,10 +192,6 @@ body#scenarios_new section#questions, body#scenarios_create section#questions {
         clear: both; }
         body#scenarios_new section#questions .question ol.answers li.answer label, body#scenarios_create section#questions .question ol.answers li.answer label {
           font-weight: normal; }
-          body#scenarios_new section#questions .question ol.answers li.answer label .text, body#scenarios_create section#questions .question ol.answers li.answer label .text {
-            float: right;
-            width: 100%;
-            margin-bottom: 15px; }
           body#scenarios_new section#questions .question ol.answers li.answer label:hover, body#scenarios_create section#questions .question ol.answers li.answer label:hover {
             color: #ff7f00;
             cursor: pointer; }
